# sgt

./: Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: .env  requirements.txt
src/base/: admin.py  forms.py  models.py  urls.py  views.py
src/base/migrations/: 0001_initial.py  0002_setores_veiculo_odometro.py
src/base/templates/: motorista_form.html  setores_form.html  veiculo_form.html
src/base/templates/base/: lista_veiculo.html  motorista_confirm_delete.html  motorista_detail.html  motorista_list.html  setores_confirm_delete.html  setores_detail.html  setores_list.html  veiculo_confirm_delete.html  veiculo_detail.html  veiculo_list.html
src/sgt/: settings.py  urls.py
src/sgt/templates/base/: lista_motoristas.html
src/static/assets/sass/: main.scss
src/staticfiles/assets/css/: main.css
src/staticfiles/assets/webfonts/: fa-brands-400.eot  fa-solid-900.eot
src/templates/: base.html  index.html
src/templates/assets/css/: main.css
src/viagens/: admin.py  forms.py  models.py  urls.py  views.py
src/viagens/migrations/: 0001_initial.py  0002_viagens_setor.py  0003_alter_viagens_dataatendimento_alter_viagens_kmfinal_and_more.py
src/viagens/templates/: viagens_form.html
src/viagens/templates/viagens/: viagens_confirm_delete.html  viagens_detail.html  viagens_form.html  viagens_list.html
