[project]
name = "src"
version = "0.1.0"
description = "Sistema de transporte"
authors = [
    {name = "João Barbosa Silva", email = "iotabe@gmail.com"},
]
dependencies = [
    "asgiref==3.7.2",
    "blinker==1.7.0",
    "CacheControl==0.14.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "crispy-bootstrap5==2023.10",
    "dep-logic==0.2.0",
    "distlib==0.3.8",
    "Django==5.0.1",
    "django-crispy-forms==2.1",
    "filelock==3.13.1",
    "findpython==0.4.1",
    "idna==3.6",
    "installer==0.7.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "msgpack==1.0.7",
    "packaging==23.2",
    "pdm==2.12.4",
    "platformdirs==4.2.0",
    "Pygments==2.17.2",
    "pyproject-hooks==1.0.0",
    "python-decouple==3.8",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "requests-toolbelt==1.0.0",
    "resolvelib==1.0.1",
    "rich==13.7.1",
    "shellingham==1.5.4",
    "sqlparse==0.4.4",
    "tomlkit==0.12.4",
    "truststore==0.8.0",
    "unearth==0.14.0",
    "urllib3==2.2.1",
    "virtualenv==20.25.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
